Initial popup play/pause interface

--- a/options.html
+++ b/options.html
@@ -39,7 +39,6 @@
 				</header>
 			
 				<div class="content">
-				
 					<section>
 						<h3>Volume</h3>
 						<div class="checkbox">
@@ -131,6 +130,16 @@
 							</label>
 						</div>
 					</section>
+
+					<section>
+						<h3>Pause Button</h3>
+						<div class="checkbox">
+							<label>
+								<input id="pause-with-play-button" type="checkbox">
+								<span>Enable pausing with extension icon</span>
+							</label>
+					</section>
+
 					
 				</div>
 			</div>
